implementação do metodo DELETE atualização da documentação no swagger
